--- a/Layout/index.html
+++ b/Layout/index.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=, initial-scale=1.0" >
     <title>Document</title>
-    <link rel="stylesheet" href="HTML-To-CSS.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="style.css" >
+    <link rel="stylesheet" href="">
+    <style></style>
+  </head>
+  <body>
     <header>
-        <nav>
-
-            <pre class="pre">
+      <nav>
+        <pre class="pre">
                 <ul>
   <li> <a href="">Home</a>   |</li> 
   <li> <a href="">About</a>  |</li>
   
                 </ul>
             </pre>
-
-        </nav>
+      </nav>
     </header>
-    
+
     <main>
-
-        <section class="section1">
-
+      <div class="div">
+        <section>
+          <h1 align="center">Welcome My Friend</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum in
+            optio magnam perspiciatis fugit facere recusandae blanditiis nobis
+            vitae, at voluptas quibusdam culpa sit. Eligendi repellendus
+            reprehenderit dolore possimus impedit dolorum aperiam aliquid rerum
+            at ratione praesentium, ullam cupiditate dolores deserunt suscipit
+            quos expedita eaque quibusdam eveniet sed nulla iste!
+          </p>
         </section>
-
+      </div>
     </main>
 
     <footer>
-  <ul>
-    <li><a href="">contact</a></li>
-    <li><a href="">My Website</a></li>
-  </ul>
+      <ul>
+        <li><a href="">contact</a></li>
+        <li><a href="">My Website</a></li>
+      </ul>
     </footer>
-
-</body>
+  </body>
 </html>
