--- a/1.CSS/basics of css/style.css
+++ b/1.CSS/basics of css/style.css
@@ -1,3 +1,17 @@
-#lorem {
-    background-color: rgb(180, 238, 88);
+body {
+    background: url("world.jpg") center no-repeat;
+    width: 100%;
+    background-size: cover; 
+    height: 50vh; 
 }
+
+#lorem {
+    text-align: justify;
+    width: 100%;
+    margin: auto;
+    font-size: large;
+    background-color: rgb(150, 200, 120, 0.6);
+    padding: 20px;
+    border-radius: 70px;
+
+} 
