--- a/1.CSS/basics of css/style.css
+++ b/1.CSS/basics of css/style.css
@@ -1,5 +1,5 @@
 body {
-    background: url("world.jpg") center no-repeat;
+    background: url("171388.gif") center no-repeat;
     width: 100%;
     background-size: cover; 
     height: 50vh; 
