--- a/1.CSS/CSS Practice set 2/style.css
+++ b/1.CSS/CSS Practice set 2/style.css
@@ -1,16 +1,34 @@
 p {
-    text-align: right;
+  text-align: left;
+  font-size: 15px;
 }
-h1 {
-    text-align: center;
-    text-decoration: underline;
-}
-
-h1{
-    text-decoration: blue dotted underline;
+#heading {
+  text-align: center;
+  text-decoration: blue dotted underline;
 }
 
-.a, a{
-   text-align: center;
-   text-decoration: none;
+.a,
+a {
+  text-align: center;
+  text-decoration: none;
+}
+
+#h1 {
+  font-weight: 100;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
+
+#h2 {
+  font-weight: 400;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#h3 {
+  font-weight: 500;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+#h4 {
+  font-weight: 900;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
