--- a/1.CSS/CSS Practice set 3/Q2.css
+++ b/1.CSS/CSS Practice set 3/Q2.css
@@ -1,23 +1,42 @@
 body{
-    background-color: rgb(36, 36, 72);
+    background-color: rgb(67, 67, 61);
 }
-
-#nav{ 
+#nav{
+    display: flex;
+    height: 60px;
+    width: 70%;
     border: 5px solid white;
-    padding-top: 1px;
-    padding-bottom: 10px;
     background-color: #0f1111;
-    height: 30px;
-    width: 100%;
-
+    margin-top: 25px;
+    margin-left: 15px;
 }
 
-#link{
-    color: orange;
+a{
+    text-decoration: none;
+    padding-left: 5px;
+    padding-bottom: 50px;
+    height: 5px;
     width: 200px;
 }
 
+#amazon{
+    color: orange;
+}
+
 #acc{
+    color: white;
+}
 
+#cart{
+    color: white;
+}
 
+#contact{
+    color: white;
+
+}
+
+button{
+    background-color: orange;
+    color: white;
 }
