--- a/1.CSS/CSS practice set 4/style.css
+++ b/1.CSS/CSS practice set 4/style.css
@@ -1,71 +1,61 @@
-.contentbox{
-    height:100px;
-    width:100px;
-    border: 2px solid black;
+.contentbox {
+  height: 200px;
+  width: 100px;
+  border: 2px solid black;
+  display: inline-block;
 }
 
+#content {
+  height: 600px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* fixing red box alignment */
+#red {
+  margin-top: 0;
+  margin-left: 13px;
+}
 
 /* nav bar css */
- body{
-    background-color: rgb(67, 67, 61);
+body {
+  background-color: rgb(67, 67, 61);
 }
-#nav{
-    display: flex;
-    height: 60px;
-    width: 70%;
-    border: 5px solid white;
-    background-color: #0f1111;
-    margin-top: 25px;
-    margin-left: 15px;
-}
-
-a{
-    text-decoration: none;
-    padding-left: 5px;
-    padding-bottom: 50px;
-    height: 5px;
-    width: 200px;
+#nav {
+  display: flex;
+  height: 60px;
+  width: 97%;
+  border: 1px solid white;
+  background-color: #0f1111;
+  margin-top: 25px;
+  margin-left: 15px;
+  margin-bottom: 1px;
 }
 
-#amazon{
-    color: orange;
+a {
+  text-decoration: none;
+  padding-left: 5px;
+  padding-bottom: 50px;
+  height: 5px;
+  width: 300px;
 }
 
-#acc{
-    color: white;
+#amazon {
+  color: orange;
+  font-size: 25px;
 }
 
-#cart{
-    color: white;
+#acc {
+  color: white;
 }
 
-#contact{
-    color: white;
-
+#cart {
+  color: white;
 }
 
-button{
-    background-color: orange;
-    color: white;
+#contact {
+  color: white;
+}
+
+button {
+  background-color: orange;
+  color: white;
 }
